--- a/tech-adapter/pyproject.toml
+++ b/tech-adapter/pyproject.toml
@@ -30,6 +30,8 @@ httpx = "^0.28.0"
 requests = "^2.32.4"
 jinja2 = "^3.1.6"
 h11 = "^0.16.0"
+pymongo = "4.13.2"
+boolean-py = "^4.0"
 
 [tool.poetry.requires-plugins]
 poetry-plugin-export = ">=1.8"
