--- a/tech-adapter/pyproject.toml
+++ b/tech-adapter/pyproject.toml
@@ -12,7 +12,7 @@ virtualenv = "^20.26.6"
 pytest = "^8.2.1"
 pytest-asyncio = "^0.23.7"
 mypy = "^1.1.1"
-fastapi = {extras = ["all"], version = "^0.115.13"}
+fastapi = {version = "^0.116.1", extras = ["all"]}
 pre-commit = "^3.1.1"
 ruff = "^0.4.5"
 opentelemetry-distro = "^0.55b1"
@@ -32,6 +32,8 @@ jinja2 = "^3.1.6"
 h11 = "^0.16.0"
 pymongo = "4.13.2"
 boolean-py = "^4.0"
+starlette = "0.47.2"
+pydantic-settings = "^2.10.1"
 
 [tool.poetry.requires-plugins]
 poetry-plugin-export = ">=1.8"
