[WIT-4716] Fix resolve issues in the tech adapter
# New features and improvements

- Updated documentation for better clarity and structure

# Bug fixes

 - Added support for component-level provisioning to ensure consistency between the `provision` and `reverse provision` flows.
 - Improved ACL updates by automatically removing users not in the new list and removing the redundant `remove_all_acls_for_principals` check.

# Related issue

Closes WIT-4716

--- a/helm/values.yaml
+++ b/helm/values.yaml
@@ -30,6 +30,10 @@ extraEnvVars:
     value: []
   - name: CONSUMER_ACTIONS
     value: []
+  - name: USECASETEMPLATEID
+    value: "urn:dmb:utm:mongodb-outputport-template:0.0.0"
+  - name: USECASETEMPLATESUBID
+    value: "urn:dmb:utm:mongodb-outputport-subcomponent-template:0.0.0"
 
 # -- readiness probe spec
 readinessProbe: {}
